--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,30 @@
 </head>
 
 <body>
-    <div class="Conteiner">
-        <div class="Header">
-            <div class="logo"></div>
-            <div class="menu">
-                <a href="http://">Главная</a>
-                <a href="http://">Услуги</a>
-                <a href="http://">Наши работы</a>
-                <a href="http://">Контакты</a>
-            </div>
-            <div class="batton"></div>
+    <header class="header">
+        <div class="logo">
+            <img class="logo__img" src="/src/logo.png" alt="logo">
         </div>
-        <div class="content">
-
-        </div>
-    </div>
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Главная</a>
+                </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Услуги</a>
+                </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Наши работы</a>
+                </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+<div class="batton">
+    
+</>
+    </header>
 </body>
 
 </html>
