--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,7 @@
                 </li>
             </ul>
         </nav>
-<div class="batton">
-    
-</>
+        <div class="Header__button">Обратная связь </div>
     </header>
 </body>
 
