--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
                 </li>
             </ul>
         </nav>
-        <div class="Header__button">Обратная связь </div>
+        <div class="Header__button">Обратная связь
+        </div>
     </header>
 </body>
 
