--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img class="logo__img" src="/src/logo.png" alt="logo">
+            <img class="logo__img" src="/src/img/logo.png" alt="logo">
         </div>
         <nav class="menu">
             <ul class="menu__list">
